--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "mongoose": "^5.7.5",
+    "multer": "^1.4.2",
     "slp-parser-js": "^4.0.0",
     "util": "^0.12.1"
   }
