--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/NathanEscandor/slippery-server#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "config": "^3.2.4",
     "express": "^4.17.1",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
     "multer": "^1.4.2",
     "slp-parser-js": "^4.0.0",
