--- a/slippery-server/package.json
+++ b/slippery-server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha --recursive ./tests"
+    "test": "mocha --recursive ./tests --watch ./modules"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
