--- a/slippery-server/package.json
+++ b/slippery-server/package.json
@@ -7,6 +7,7 @@
     "test": "mocha --recursive ./tests --watch ./modules"
   },
   "dependencies": {
+    "bluebird": "^3.7.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
