--- a/slippery-server/package.json
+++ b/slippery-server/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
+    "node-mocks-http": "^1.8.0",
     "sinon": "^7.5.0"
   }
 }
