--- a/slippery-server/package.json
+++ b/slippery-server/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "mocha": "^6.2.2",
     "node-mocks-http": "^1.8.0",
     "sinon": "^7.5.0"
