--- a/slippery-server/package.json
+++ b/slippery-server/package.json
@@ -21,6 +21,7 @@
     "chai-http": "^4.3.0",
     "mocha": "^6.2.2",
     "node-mocks-http": "^1.8.0",
-    "sinon": "^7.5.0"
+    "sinon": "^7.5.0",
+    "sinon-mongoose": "^2.3.0"
   }
 }
