--- a/slippery-server/package.json
+++ b/slippery-server/package.json
@@ -17,11 +17,14 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "bcryptjs": "^2.4.3",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.2",
     "node-mocks-http": "^1.8.0",
     "sinon": "^7.5.0",
-    "sinon-mongoose": "^2.3.0"
+    "sinon-mongoose": "^2.3.0",
+    "validator": "^12.1.0"
   }
 }
