--- a/slippery-server/package.json
+++ b/slippery-server/package.json
@@ -14,7 +14,9 @@
     "http-errors": "~1.6.3",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.12",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "bcryptjs": "^2.4.3",
