--- a/slippery-server/package.json
+++ b/slippery-server/package.json
@@ -25,6 +25,7 @@
     "chai-http": "^4.3.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.2",
+    "mockgoose-fix": "^7.3.6",
     "node-mocks-http": "^1.8.0",
     "sinon": "^7.5.0",
     "sinon-mongoose": "^2.3.0",
